--- a/package.json
+++ b/package.json
@@ -1,53 +1,67 @@
 {
+  "name": "theme-water-drop",
+  "type": "module",
+  "packageManager": "pnpm@9.5.0",
   "description": "A development starter theme with Vite Ecosystem for Halo",
+  "author": {
+    "name": "zaneliu",
+    "email": "hi@zaneliu.me",
+    "url": "https://github.com/ZaneL1u/theme-water-drop"
+  },
+  "license": "GPL-3.0",
+  "homepage": "https://github.com/ZaneL1u/theme-water-drop#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ZaneL1u/theme-water-drop"
+  },
+  "bugs": {
+    "url": "https://github.com/ZaneL1u/theme-water-drop/issues"
+  },
   "keywords": [
     "halo",
     "halo-theme"
   ],
-  "homepage": "https://github.com/halo-dev/theme-vite-starter#readme",
-  "bugs": {
-    "url": "https://github.com/halo-dev/theme-vite-starter/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/halo-dev/theme-vite-starter"
-  },
-  "license": "GPL-3.0",
-  "author": {
-    "name": "Halo",
-    "email": "hi@halo.run",
-    "url": "https://github.com/halo-dev"
-  },
   "maintainers": [
     {
-      "name": "Ryan Wang",
-      "email": "i@ryanc.cc",
-      "url": "https://github.com/ruibaby"
+      "name": "zaneliu",
+      "email": "hi@zaneliu.me",
+      "url": "https://github.com/ZaneL1u"
     }
   ],
   "scripts": {
     "build": "tsc && vite build",
-    "dev": "vite build --watch",
+    "dev": "vite build",
+    "preview": "vite preview",
     "lint": "eslint ./src --ext .js,.cjs,.mjs,.ts,.cts,.mts --ignore-path .gitignore",
-    "prepare": "husky",
-    "prettier": "prettier --write './**/*.{ts,json,yaml,yml,html}'"
-  },
-  "lint-staged": {
-    "*.{ts,json,yaml,yml,html}": [
-      "prettier --write"
-    ]
+    "postinstall": "simple-git-hooks",
+    "up": "taze -rwiI"
   },
   "devDependencies": {
-    "@types/node": "18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.57.0",
+    "@antfu/eslint-config": "^2.22.0",
+    "@types/node": "^20.14.10",
+    "automd": "^0.3.8",
+    "eslint": "^9.6.0",
     "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "prettier": "^2.8.8",
+    "eslint-plugin-solid": "^0.14.1",
+    "gsap": "^3.12.5",
+    "lint-staged": "^15.2.7",
+    "lodash-es": "^4.17.21",
+    "node-fetch": "^3.3.2",
+    "simple-git-hooks": "^2.11.1",
+    "solid-js": "^1.8.18",
+    "taze": "^0.14.2",
     "typescript": "^4.9.5",
-    "vite": "^5.1.6"
+    "unocss": "^0.61.3",
+    "vike": "^0.4.179",
+    "vike-solid": "^0.6.2",
+    "vite": "^5.3.3"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
